--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 django = "^4.2.3"
 psycopg2-binary = "^2.9.6"
 djangorestframework = "^3.15.1"
+pre-commit = "^3.7.0"
 
 [tool.poetry.dev-dependencies]
 
