--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -7,9 +7,12 @@ authors = ["Felippo Coelho"]
 [tool.poetry.dependencies]
 python = "^3.9"
 django = "^4.2.3"
-psycopg2-binary = "^2.9.6"
+psycopg2-binary = "^2.9.9"
 djangorestframework = "^3.15.1"
 pre-commit = "^3.7.0"
+requests = "^2.31.0"
+drf-spectacular = "^0.27.2"
+pydantic = "^2.7.0"
 
 [tool.poetry.dev-dependencies]
 
