refactor: update .env.example

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,1 +1,13 @@
+ENV=local
+
+DJANGO_SETTINGS_MODULE=take_home.settings
+DJANGO_LOG_LEVEL=DEBUG
+
+POSTGRES_NAME=
+POSTGRES_USER=
+POSTGRES_PASS=
+POSTGRES_HOST=
+POSTGRES_PORT=
+
 NASA_API_KEY=
+NASE_BASE_URL=
